--- a/.github/workflows/deployment-exer-1.yml
+++ b/.github/workflows/deployment-exer-1.yml
@@ -8,15 +8,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          cd second-action-react-demo 
+          cd third-action-react-demo 
           npm ci
       - name: Lint
         run: |
-          cd second-action-react-demo 
+          cd third-action-react-demo 
           npm run lint 
       - name: Test code
         run: |
-          cd second-action-react-demo 
+          cd third-action-react-demo 
           npm run test 
       - name: Deployment
         run: echo "Deploying..."
