--- a/.github/workflows/deployment-exer-2.yml
+++ b/.github/workflows/deployment-exer-2.yml
@@ -15,6 +15,7 @@ jobs:
           cd third-action-react-demo 
           npm run lint
   test:
+    # needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -27,7 +28,8 @@ jobs:
         run: |
           cd third-action-react-demo 
           npm run test 
-  deploy: 
+  deploy:
+    # needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
