--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output event details
-        run: echo "{{ toJSON(github.event) }}"
+        run: |
+          echo "Event details:"
+          echo "${{ toJSON(github.event) }}"
