add demo2 action

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,23 +1,23 @@
 name: Events Demo 1
 on: 
-  pull_request:
-    types: 
-      - opened
-      # - closed
-    branches: 
-      - main
-      - 'dev-*' # dev-new dev-this-is-new
-      - 'feat/**' # feat/new feat/new/button
-      # developer-1
+  # pull_request:
+  #   types: 
+  #     - opened
+  #     # - closed
+  #   branches: 
+  #     - main
+  #     - 'dev-*' # dev-new dev-this-is-new
+  #     - 'feat/**' # feat/new feat/new/button
+  #     # developer-1
   workflow_dispatch:
-  push: 
-    branches: 
-      - main
-      - 'dev-*' # dev-new dev-this-is-new
-      - 'feat/**' # feat/new feat/new/button
-      # developer-1
-    paths-ignore:
-      - '.github/workflows/*'
+  # push: 
+  #   branches: 
+  #     - main
+  #     - 'dev-*' # dev-new dev-this-is-new
+  #     - 'feat/**' # feat/new feat/new/button
+  #     # developer-1
+  #   paths-ignore:
+  #     - '.github/workflows/*'
 jobs: 
   deploy:
     runs-on: ubuntu-latest
