--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -35,6 +35,13 @@ jobs:
         run: |
           cd job-artifacts
           npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
