--- a/job-artifacts/.eslintrc.json
+++ b/job-artifacts/.eslintrc.json
@@ -23,5 +23,13 @@
     "react": {
       "version": "detect"
     }
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.test.jsx", "**/*.test.js", "**/*.spec.jsx", "**/*.spec.js"],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
