--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -39,13 +39,20 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: |
-            job-artifacts/dist
-            job-artifacts/package.json
+          path: job-artifacts/dist
+          # path: |
+          #   job-artifacts/dist
+          #   job-artifacts/package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
 
