--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: dist-files
       - name: Output contents
