--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Publish JS filename
         id: publish
         run: |
-          find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+          find job-artifacts/dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
