--- a/.github/workflows/env-var-action.yml
+++ b/.github/workflows/env-var-action.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.hhzeppa.mongodb.net
-      MONGODB_USERNAME: stoevandy_db
-      MONGODB_PASSWORD: Hi9gRBGU5BlCyfQQ
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
