--- a/.github/workflows/env-var-action.yml
+++ b/.github/workflows/env-var-action.yml
@@ -8,11 +8,12 @@ env:
   MONGO_DB_NAME: gha-demo
 jobs:
   test:
-    env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.hhzeppa.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      PORT: 8080
+    environment: testing
+    # env:
+    #   MONGODB_CLUSTER_ADDRESS: cluster0.hhzeppa.mongodb.net
+    #   MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+    #   MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+    #   PORT: 8080
     runs-on: ubuntu-latest
     steps:
       - name: Get code
