--- a/.github/workflows/env-var-action.yml
+++ b/.github/workflows/env-var-action.yml
@@ -1,9 +1,10 @@
 name: Deployment
-on:
-  push:
-    branches:
-      - main
-      - dev
+# on:
+#   push:
+#     branches:
+#       - main
+#       - dev
+on: workflow_dispatch
 env:
   MONGO_DB_NAME: gha-demo
 jobs:
