add eslint config-2

--- a/.github/workflows/exec-flow.yml
+++ b/.github/workflows/exec-flow.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install dependencies
         run: |
           cd exec-flow
+          npm install
+          npm install --save-dev eslint-plugin-vitest  # Add Vitest ESLint plugin
           npm ci
       - name: Lint code
         run: |
