add eslint config-4

--- a/.github/workflows/exec-flow.yml
+++ b/.github/workflows/exec-flow.yml
@@ -62,7 +62,9 @@ jobs:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd exec-flow
+          npm ci
       - name: Build website
         id: build-website
         run: |
