--- a/.github/workflows/exec-flow.yml
+++ b/.github/workflows/exec-flow.yml
@@ -41,10 +41,12 @@ jobs:
           cd exec-flow
           npm ci
       - name: Test code
+        id: run-tests
         run: |
           cd exec-flow
           npm run test
       - name: Upload test report
+        if: failure() && steps.run-tests.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
           name: test-report
@@ -87,3 +89,12 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  report:
+    runs-on: ubuntu-latest  
+    steps: 
+      - name: Output information
+        run: |
+          echo "Something went wrong"
+          echo "${{ github }}"
+
+
