--- a/.github/workflows/exec-flow.yml
+++ b/.github/workflows/exec-flow.yml
@@ -75,8 +75,8 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist-files
-          path: dist
+          name: exec-flow/dist-files
+          path: exec-flow/dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -84,12 +84,13 @@ jobs:
       - name: Get build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist-files
+          name: exec-flow/dist-files
       - name: Output contents
         run: ls
       - name: Deploy
         run: echo "Deploying..."
   report:
+    needs: [lint, deploy]
     runs-on: ubuntu-latest  
     steps: 
       - name: Output information
