--- a/.github/workflows/exec-flow.yml
+++ b/.github/workflows/exec-flow.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: dist-files
+          path: exec-flow/dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
