--- a/.github/workflows/continue.yml
+++ b/.github/workflows/continue.yml
@@ -1,4 +1,4 @@
-name: Website Deployment
+name: Continue Website Deployment
 # on:
 #   push:
 #     branches:
@@ -42,12 +42,12 @@ jobs:
           cd exec-flow
           npm ci
       - name: Test code
+        continue-on-error: true
         id: run-tests
         run: |
           cd exec-flow
           npm run test
       - name: Upload test report
-        if: failure() && steps.run-tests.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
           name: test-report
