--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -1,10 +1,12 @@
 name: Matrix Demo
-on: push
+# on: push
+on: workflow_dispatch
 jobs:
   build:
+    continue-on-error: true
     strategy:
       matrix:
-        node-version: [14, 16]
+        node-version: [12, 14, 16]
         operating-system: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.operating-system }}
     steps:
