--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -13,7 +13,11 @@ jobs:
             operating-system: ubuntu-latest
         exclude: 
           - node-version: 12
-            operating-system: [ubuntu-latest, macos-latest]
+            operating-system: ubuntu-latest
+          - node-version: 12
+            operating-system: macos-latest
+          - node-version: 14
+            operating-system: macos-latest
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: Get Code
