--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -1,6 +1,6 @@
 name: Matrix Demo
-on: push
-# on: workflow_dispatch
+# on: push
+on: workflow_dispatch
 jobs:
   build:
     continue-on-error: true
