--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -1,9 +1,9 @@
-name: Website Deployment
-# on:
-#   push:
-#     branches:
-#       - main
-on: workflow_dispatch
+name: Using Reusable Workflow
+on:
+  push:
+    branches:
+      - main
+# on: workflow_dispatch
 jobs:
   lint:
     runs-on: ubuntu-latest
