added reusable workflow

--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -83,7 +83,7 @@ jobs:
     needs: build
     uses: ./.github/workflows/reusable.yml
     with: 
-      artifact-name:: dist-files
+      artifact-name: dist-files
   report:
     needs: [lint, deploy]
     runs-on: ubuntu-latest  
