--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -89,9 +89,13 @@ jobs:
   print-deploy-result:
     needs: deploy
     runs-on: ubuntu-latest
+    if: always()
     steps:
       - name: Print deploy output
-        run: echo "${{ needs.deploy.outputs.result }}"
+        run: |
+          echo "Deploy job status: ${{ needs.deploy.result }}"
+          echo "Deploy output value: ${{ needs.deploy.outputs.result || 'No output set' }}"
+          echo "If you see 'No output set', the deploy job might have failed before setting output"
   report:
     needs: [lint, deploy]
     runs-on: ubuntu-latest  
