--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -1,9 +1,9 @@
 name: Using Reusable Workflow
-on:
-  push:
-    branches:
-      - main
-# on: workflow_dispatch
+# on:
+#   push:
+#     branches:
+#       - main
+on: workflow_dispatch
 jobs:
   lint:
     runs-on: ubuntu-latest
