--- a/.github/workflows/deployment-docker.yml
+++ b/.github/workflows/deployment-docker.yml
@@ -35,21 +35,21 @@ jobs:
           cd docker-containers
           echo "Checking environment variables:"
           echo "Protocol: $MONGODB_CONNECTION_PROTOCOL"
-          echo "Cluster: $MONGODB_CLUSTER_ADDRESS" 
+          echo "Cluster: $MONGODB_CLUSTER_ADDRESS"
           echo "Username: $MONGODB_USERNAME"
           echo "DB Name: $MONGODB_DB_NAME"
           echo "Port: $PORT"
-    
-          # Create a simple test script
-          cat > test-connection.js << 'EOF'
+          
+          # Create a simple test script - FIXED EOF SYNTAX
+          cat << 'EOF' > test-connection.js
           const { MongoClient } = require('mongodb');
-    
+          
           const username = process.env.MONGODB_USERNAME;
           const password = process.env.MONGODB_PASSWORD;
           const cluster = process.env.MONGODB_CLUSTER_ADDRESS;
           const dbName = process.env.MONGODB_DB_NAME;
           const protocol = process.env.MONGODB_CONNECTION_PROTOCOL;
-    
+          
           // Try different connection string formats
           const connectionStrings = [
             `${protocol}://${username}:${password}@${cluster}/${dbName}?retryWrites=true&w=majority`,
@@ -57,13 +57,13 @@ jobs:
             `${protocol}://${username}:${password}@${cluster}`,
             `mongodb+srv://${username}:${password}@${cluster}/${dbName}?retryWrites=true&w=majority`
           ];
-    
+          
           async function testConnection() {
             for (let i = 0; i < connectionStrings.length; i++) {
               const cs = connectionStrings[i];
               console.log(`\nTesting connection string ${i + 1}:`);
               console.log(cs.replace(password, '****'));
-        
+              
               try {
                 const client = new MongoClient(cs);
                 await client.connect();
@@ -76,11 +76,12 @@ jobs:
             }
             return false;
           }
-    
+          
           testConnection().then(success => {
             if (!success) process.exit(1);
           });
-    
+          EOF
+          
           node test-connection.js
       - name: Run server
         run: |
