--- a/.github/workflows/deployment-docker.yml
+++ b/.github/workflows/deployment-docker.yml
@@ -16,8 +16,8 @@ jobs:
       image: node:16
 
     env:
-      MONGODB_CONNECTION_PROTOCOL: mongodb #+srv
-      MONGODB_CLUSTER_ADDRESS: mongodb #cluster0.hhzeppa.mongodb.net
+      MONGODB_CONNECTION_PROTOCOL: mongodb
+      MONGODB_CLUSTER_ADDRESS: mongodb
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
