--- a/.github/workflows/deployment-docker.yml
+++ b/.github/workflows/deployment-docker.yml
@@ -17,7 +17,7 @@ jobs:
 
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb #+srv
-      MONGODB_CLUSTER_ADDRESS: mongodb #cluster0.hhzeppa.mongodb.net
+      MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017 #cluster0.hhzeppa.mongodb.net
       MONGODB_USERNAME: root #${{ secrets.MONGODB_USERNAME }}
       MONGODB_PASSWORD: example #${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
@@ -25,6 +25,8 @@ jobs:
     services:
       mongodb:
         image: mongo
+        ports:
+          - 27017:27017
         env: 
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
