--- a/.github/workflows/deployment-docker.yml
+++ b/.github/workflows/deployment-docker.yml
@@ -12,8 +12,8 @@ jobs:
     environment: testing
     runs-on: ubuntu-latest
     
-    container: 
-      image: node:16
+    # container: 
+    #   image: node:16
 
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
