--- a/.github/workflows/deployment-docker.yml
+++ b/.github/workflows/deployment-docker.yml
@@ -1,9 +1,9 @@
 name: Deployment (Container)
-on:
-  push:
-    branches:
-      - main
-      - dev
+on: workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
+  #     - dev
 env:
   CACHE_KEY: node-deps
   MONGODB_DB_NAME: gha-demo
