--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'Whether to cache dependencies or not.'
     required: false
     default: 'true'
+outputs:
+  used-cache:
+    description: 'Cache was used.'
+    value: ${{ steps.install }}
 runs:
   using: 'composite'
   steps:
@@ -16,8 +20,10 @@ runs:
         path: custom-actions/node_modules
         key: deps-node-modules-${{ hashFiles('custom-actions/package-lock.json') }}
     - name: Install dependencies
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       run: |
         cd custom-actions
         npm ci
+        echo "::set-output name-cache::'${{ inputs.caching }}'"
       shell: bash
