add output corrected

--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
   used-cache:
     description: 'Cache was used.'
-    value: ${{ steps.install }}
+    value: ${{ steps.install.outputs.cache-used }}
 runs:
   using: 'composite'
   steps:
@@ -25,5 +25,5 @@ runs:
       run: |
         cd custom-actions
         npm ci
-        echo "::set-output name-cache::'${{ inputs.caching }}'"
+        echo "cache-used=${{ inputs.caching }}" >> $GITHUB_OUTPUT
       shell: bash
